--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -57,7 +57,7 @@
         <div class="z-edit-row flex-column">
             <label th:text="#{cmdb.type.label.icon}"></label>
             <div class="flex-row z-input-button">
-                <input class="z-input col-pct-12 inherit" id="typeIcon" name="typeIcon" type="text" readonly>
+                <input class="z-input inherit" id="typeIcon" name="typeIcon" type="text" readonly>
                 <span class="z-icon i-clear" name="clearIcon" onclick="aliceJs.clearText(this);" tabindex="-1"></span>
                 <button class="z-button-search z-button form" name="typeIconSelector" type="button" onclick="iconPopUp();" th:text="#{common.btn.select}"></button>
             </div>
@@ -65,7 +65,7 @@
         <div class="z-edit-row flex-column">
             <label th:text="#{cmdb.type.label.class}"></label>
             <div class="flex-row z-input-button">
-                <input class="z-input col-pct-12 inherit" id="typeClass" name="typeClass" type="text" readonly>
+                <input class="z-input inherit" id="typeClass" name="typeClass" type="text" readonly>
                 <input id="typeClassId" name="typeClassId" type="hidden"/>
                 <span class="z-icon i-clear" name="clearClass" onclick="aliceJs.clearText(this);" tabindex="-1"></span>
                 <button class="z-button-search z-button form" name="typeClassSelector" type="button" onclick="classPopUp();" th:text="#{common.btn.select}"></button>
