#10899 디자인 - 포탈

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -2453,6 +2453,7 @@ select {
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
+  line-height: 1.6;
   color: #222529;
   outline: none;
 }
@@ -4410,6 +4411,9 @@ select {
 .z-picker-wrapper-date {
   display: inline-block;
 }
+.z-picker-wrapper-date .picker-main {
+  padding-right: 2.25rem;
+}
 
 .z-picker-modal {
   display: none;
@@ -5836,6 +5840,25 @@ body.modal-active {
 }
 .z-component .z-element .input, .z-component .z-element .z-input {
   width: 100%;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+}
+.z-component .z-element .input:hover, .z-component .z-element .z-input:hover {
+  outline: 0;
+  border: 0.0625rem solid #64BBF6;
+}
+.z-component .z-element .input:focus, .z-component .z-element .z-input:focus {
+  outline: 0;
+  border: 0.0625rem solid #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-component .z-element .input:active, .z-component .z-element .z-input:active {
+  outline: 0;
+  border: 0.0625rem solid #2578CE;
 }
 .z-component .z-element .textArea, .z-component .z-element .z-textarea {
   width: 100%;
@@ -5907,6 +5930,9 @@ body.modal-active {
 .z-component .z-element .z-ci-table .no-data-found-list td {
   vertical-align: middle;
 }
+.z-component .z-element .picker-wrapper-date .z-input {
+  margin-right: 2rem;
+}
 .z-component .z-element .picker-wrapper-date .datepicker {
   width: 100%;
 }
@@ -5937,6 +5963,10 @@ body.modal-active {
 }
 .z-component .z-element .z-dr-table .z-dr-table-row .z-button-icon {
   padding: 0;
+}
+.z-component .z-element .z-dr-table .z-dr-table-row .z-input, .z-component .z-element .z-dr-table .z-dr-table-row .z-select {
+  padding: 0.4375rem 0;
+  margin: 0.25rem 0;
 }
 .z-component .z-element .z-dr-table .no-data-found-list {
   color: #ABB0B5;
