#11078 포탈화면에서 검색어 입력후 삭제시 목록이 안나오는 현상(소스컨벤션 수정 )

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -8,7 +8,7 @@
 <body>
 <th:block layout:fragment="portalContent">
     <div class="main">
-        <div id= "main-banner" class="main-banner">
+        <div id="main-banner" class="main-banner">
             <h1 class="title align-center" th:text="#{portal.label.topPhrase}"></h1>
         </div>
         <div id="main-search" class="main-search align-center">
@@ -17,7 +17,7 @@
                    th:placeholder="#{common.label.searchWord}" maxlength="100"/>
             <span id="spanTotalCount" class="search-count"></span>
         </div>
-        <div id="main-content" class="main-content">
+        <div class="main-content">
             <ul class="card-group flex-row justify-content-between">
                 <li class="card flex-column">
                     <div class="card-header align-center">
