--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -409,7 +409,7 @@ $modal-backdrop-bg-color:                    hexToRGBA($gray500, 0.5);
 $modal-border-color:                         $gray300;
 $modal-border-width:                         0.0625rem; // 1px
 $modal-bg-color:                             $white;
-$modal-box-shadow-color:                     hexToRGBA(#7493b3, 0.25);
+$modal-box-shadow-color:                     $gray400;
 
 $modal-width:                                34.38rem; // 550px
 $modal-height:                               22.5rem; // 360px
@@ -428,7 +428,7 @@ $alert-backdrop-bg-color:                    hexToRGBA($gray500, 0.5);
 $alert-border-color:                         $gray300;
 $alert-border-width:                         0.0625rem; // 1px
 $alert-bg-color:                             $white;
-$alert-box-shadow-color:                     hexToRGBA(#7493b3, 0.25);
+$alert-box-shadow-color:                     $gray400;
 
 $alert-font-size:                            $font-size-xs;
 $alert-font-weight:                          $font-weight-medium;
