#11109 트리 화면 동작 통일 -> 일감 수정 진행

--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -117,7 +117,7 @@
             }
             if (updatable === 'false') {
                 document.querySelectorAll('label[name="updateLabel"]').forEach(function (updateLabel) {
-                    updateLabel.onclick = function () {
+                    updateLabel.ondblclick = function () {
                         return;
                     };
                 });
